--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 # Your configuration properties
-quarkus.http.port=8081
+quarkus.http.port=8082
 
-## Docker 4 Mac workaround, uncomment if you use docker desktop once you connected to RHDG
-#quarkus.infinispan-client.client-intelligence=BASIC
+# Infinispan Server address
+#quarkus.infinispan-client.server-list=rhdg-external-user3-challenge6.apps.cluster-pjw6b.pjw6b.sandbox1032.opentlc.com:11222
+infinispan.remote.server-list=localhost:11222
+infinispan.remote.use-auth=true
+infinispan.remote.sasl-mechanism=SCRAM-SHA-512
+infinispan.remote.auth-realm=default
+
+# Authentication
+infinispan-client.auth-username=developer
+infinispan-client.auth-password=thedeveloperpassword
+infinispan-client.auth-server-name=example-infinispan
+infinispan-client.auth-realm=default
+
+# Infinispan client intelligence
+# Use BASIC as a Docker for Mac workaround
+#infinispan-client.client-intelligence=BASIC
