Add infinispan configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,14 @@
 quarkus.http.port=8082
 
 # Infinispan Server address
-#quarkus.infinispan-client.server-list=rhdg-external-user3-challenge6.apps.cluster-pjw6b.pjw6b.sandbox1032.opentlc.com:11222
-infinispan.remote.server-list=localhost:11222
-infinispan.remote.use-auth=true
-infinispan.remote.sasl-mechanism=SCRAM-SHA-512
-infinispan.remote.auth-realm=default
+#quarkus.infinispan-client.server-list=localhost:11222
+quarkus.infinispan-client.server-list=rhdg.user2-challenge6.svc.cluster.local:11222
 
 # Authentication
-infinispan-client.auth-username=developer
-infinispan-client.auth-password=thedeveloperpassword
-infinispan-client.auth-server-name=example-infinispan
-infinispan-client.auth-realm=default
+quarkus.infinispan-client.use-auth=true
+quarkus.infinispan-client.auth-username=developer
+quarkus.infinispan-client.auth-password=thedeveloperpassword
 
 # Infinispan client intelligence
 # Use BASIC as a Docker for Mac workaround
-#infinispan-client.client-intelligence=BASIC
+#quarkus.infinispan-client.client-intelligence=BASIC
