add openshift configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,17 @@ quarkus.infinispan-client.auth-password=thedeveloperpassword
 # Infinispan client intelligence
 # Use BASIC as a Docker for Mac workaround
 #quarkus.infinispan-client.client-intelligence=BASIC
+
+
+quarkus.log.console.enable=true
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.level=INFO
+quarkus.log.console.color=true
+
+quarkus.swagger-ui.always-include=true
+
+quarkus.http.host=0.0.0.0
+
+quarkus.kubernetes-client.trust-certs=true
+quarkus.kubernetes-client.namespace=user2-challenge6
+quarkus.openshift.route.expose=true
