--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,4 @@ quarkus.http.host=0.0.0.0
 quarkus.kubernetes-client.trust-certs=true
 quarkus.kubernetes-client.namespace=user1-challenge6
 quarkus.openshift.route.expose=true
+quarkus.openshift.expose=true
